v0.3.6:
	- bug fixes: due to poor design choice, all policies in a multipolicy handler will end up with the same config,
	  that being the config for the last configured policy.  As such, earlier ones would send the wrong messages, and
	  possibly exhibit other problematic issues.  This is fixed.
v0.3.3-5:
	- improvements to setuptools install process (pip / setup.py) which should make it possible to format
	  correct SystemD service description files to run the installed CHAPPS services, even from within their venv
v0.3.2:
	- putting extra artifacts in a chapps dir, w/i venv or /usr/local depending
v0.3.1:
	- Updating documentation
v0.3:
	- Sender-domain authorization policy allows an RDBMS to indicate which domains a particular user
	  is authorized to emit mail on behalf of.
	- There are more updates to the config file.
	- There are additions to the database schema which should be compatible with v0.2
v0.2.1:
	- Now supports connecting to Redis via Sentinel; provide a space-separated list of host:port info
	  for `sentinel_servers` in the config, and specify the name of the dataset in `sentinel_dataset`
	- Some minor changes to the config file have occured; the `sentinel_master` param and the `db` param
	  have been removed
v0.2:
	- PLEASE NOTE: the database schema has changed with this update
	- DB access encapsulation and outbound-traffic user identification is now independent of any policy or handler
	- some symbol names have been updated for greater clarity
	- the documentation has been improved somewhat; more to come
v0.1:
	- Outbound Quota and Greylisting policies function, but their feature sets may be incomplete.
	- Installation procedure just a bit wonky.